src/main/java/com/example/intelijplugin/grammar/Ballerina.bnf
{
    // Name and the location of the parser which will be generated.
    parserClass="vts.parser.SimpleParser"

    // All nodes will extend this class. This wraps AST node to a PSI node.
    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    // Prefix for all generated classes.
    psiClassPrefix="Simple"
    // Suffix for implementation classes.
    psiImplClassSuffix="Impl"

    // Location to be used when generating PSI classes.
    psiPackage="vts.psi"
    // Location to be used when generating PSI implementation classes.
    psiImplPackage="vts.psi.impl"

    // Element type holder class name. This class will be used extensively throughout the tutorial.
    elementTypeHolderClass="vts.psi.SimpleTypes"

    // Class which will be used to create internal nodes.
    elementTypeClass="vts.psi.SimpleElementType"
    // Class which will be used to create leaf nodes.
    tokenTypeClass="vts.psi.SimpleTokenType"

    tokens = [
        IDENTIFIER = 'regexp:[a-zA-Z_][a-zA-Z0-9_]*'
        WHITE_SPACE = 'regexp:\s+'
        LB= '('
        RB= ')'
        LP= '{'
        RP= '}'
        SEMI= ';'
        LSB='['
        RSB=']'
        COMMA=','
        ENTITY = 'regexp: ENTITY | entity'
        API = 'regexp: API | api'
        DTO = 'regexp: DTO | dto'
        RELATIONSHIP = 'regexp: RELATIONSHIP | relationship'
        ONETOONE = 'OneToOne'
        ONETOMANY = 'OneToMany'
        MANYTOONE = 'ManyToOne'
        MANYTOMANY = 'ManyToMany'
        REQUIRE = 'require'
        UNIQUE = 'unique'

    ]
}


program ::= (entity_declaration|relationship_declaration |dto_declaration)* EOF

// api_declaration: API
entity_declaration ::= ENTITY IDENTIFIER* table_name?
table_name ::= LSB IDENTIFIER RSB
entity_body::= LP entity_field* RP
entity_field::= ID type entity_validate* SEMI
relation_type::= ONETOMANY | ONETOONE | MANYTOMANY |MANYTOONE
entity_validate::= REQUIRE | UNIQUE

relationship_declaration::= API
dto_declaration::= DTO
